--- a/srcs/file.html
+++ b/srcs/file.html
@@ -1,39 +1,21 @@
 <html>
-<head><title>Index of ../..//</title></head>
+<head><title>Index of ./</title></head>
 <body bgcolor="white">
-	<h1>Index of ../..//</h1>
+	<h1>Index of ./</h1>
 	<pre>Name						Size					LastData</pre>
 	<hr>
-	
 <pre><a href="../">..</a></pre>
-<pre><a href=".landscape">.landscape</a>                                      0                                       Thu Jan  1 00:00:00 1970
+<pre><a href="Request.hpp">Request.hpp</a>                                     2184                                    Thu Nov  4 19:39:33 2021
+</pre><pre><a href="Response.hpp">Response.hpp</a>                                    192                                     Thu Nov  4 19:32:55 2021
+</pre><pre><a href="utils.cpp">utils.cpp</a>                                       1937                                    Thu Nov  4 16:02:54 2021
+</pre><pre><a href="Request.cpp">Request.cpp</a>                                     6762                                    Thu Nov  4 19:43:07 2021
+</pre><pre><a href="main.cpp">main.cpp</a>                                        855                                     Thu Nov  4 16:02:54 2021
+</pre><pre><a href="Server.cpp">Server.cpp</a>                                      3231                                    Thu Nov  4 16:02:54 2021
+</pre><pre><a href="file.html">file.html</a>                                       1688                                    Thu Nov  4 20:20:06 2021
+</pre><pre><a href="User.cpp">User.cpp</a>                                        132                                     Thu Nov  4 16:01:11 2021
+</pre><pre><a href="Response.cpp">Response.cpp</a>                                    2682                                    Thu Nov  4 20:23:23 2021
+</pre><pre><a href="a.out">a.out</a>                                           174120                                  Thu Nov  4 20:23:25 2021
 </pre>
-<pre><a href=".sudo_as_admin_successful">.sudo_as_admin_successful</a>                       0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".gitconfig">.gitconfig</a>                                      0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".cache">.cache</a>                                          0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".bash_history">.bash_history</a>                                   0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".wget-hsts">.wget-hsts</a>                                      0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".motd_shown">.motd_shown</a>                                     0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href="webserv">webserv</a>                                         0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".profile">.profile</a>                                        0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".bash_logout">.bash_logout</a>                                    0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".bashrc">.bashrc</a>                                         0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".vsliveshare">.vsliveshare</a>                                    0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".local">.local</a>                                          0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<pre><a href=".vscode-server">.vscode-server</a>                                  0                                       Thu Jan  1 00:00:00 1970
-</pre>
-<hr>
+	<hr>
 </body>
 </html>
