--- a/defaultPages/directory_listing.html
+++ b/defaultPages/directory_listing.html
@@ -1,7 +1,7 @@
 <html>
-<head><title>Index of FILE_DIR/</title></head>
+<head><title>Index of FILE_DIR</title></head>
 <body bgcolor="white">
-	<h1>Index of FILE_DIR/</h1>
+	<h1>Index of FILE_DIR</h1>
 	<pre>Name						Size					LastData</pre>
 	<hr>
 	<hr>
