--- a/www/404.html
+++ b/www/404.html
@@ -56,6 +56,7 @@
 
 <body>
   <!-- This file lives in public/404.html -->
+  <div class="logo"><img src="/images/42_logo.svg" alt="logo"></div>
   <div class="title"><img src="/images/404.png" alt=""></div>
   <div class="screen">
     <div class="main-image">
