--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,15 @@
     margin: 0;
   }
 
+  .logo {
+    position: absolute;
+    left: 1%;
+    top: 2%;
+    width: 5%;
+    height: auto;
+  }
+
+
   .main-image {
     position: absolute;
     top: 25px;
@@ -41,6 +50,7 @@
 </head>
 
 <body>
+  <div class="logo"><img src="/images/42_logo.svg" alt="logo"></div>
   <div class="screen">
     <div class="main-image">
     </div>
