--- a/defaultPages/default_site_index.html
+++ b/defaultPages/default_site_index.html
@@ -62,5 +62,8 @@
   <input id="POST-name" type="text" name="name">
   <input type="submit" value="Save">
 </form>
-
+<form action="" method="delete">
+<label for="DELETE-name">Exit</label>
+<input type="submit" value="Save">
+</form>
 </html>
