post delete start

--- a/www/index.html
+++ b/www/index.html
@@ -72,5 +72,10 @@
   <input id="POST-name" type="text" name="name">
   <input type="submit" value="Save">
 </form>
+<form action="" method="get">
+  <label for="POST-name">Name:</label>
+  <input id="POST-name" type="text" name="name">
+  <input type="submit" value="Save">
+</form>
 
 </html>
